<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_favourite_list"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favourite_list"/>

    <item
        android:id="@+id/navigation_shopping_list"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/shopping_list"/>

    <item
        android:id="@+id/navigation_storage"
        android:icon="@drawable/ic_baseline_store_24"
        android:title="@string/storage"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"/>

</menu>